# agent-compliance-gate

./: LICENSE  README.md  SECURITY.md  gate.py  pyproject.toml
.github/workflows/: ci.yml  codeql.yml
examples/: quickstart.py
src/compliance_gate/: __init__.py  gate.py  reviewers.py
tests/: test_gate.py
